--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,11 @@
 services:
   - type: web
-    name: python-backend
+    name: cat-doc
     env: python
-    buildCommand: "./build.sh"
-    startCommand: "gunicorn app:app"  # or whatever you use
+    buildCommand: |
+      apt-get update && apt-get install -y tesseract-ocr
+      pip install -r requirements.txt
+    startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
-        value: 3.10
+        value: 3.10  # or whatever version you use
